imported resnet models from original notebook

--- a/notebooks/cifar_models_performance_analysis_v1.ipynb
+++ b/notebooks/cifar_models_performance_analysis_v1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2ebc15ca",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "227b3452",
    "metadata": {},
    "outputs": [
@@ -59,12 +59,12 @@
    "id": "b0af5dd2",
    "metadata": {},
    "source": [
-    "# Train model"
+    "# Import Resnet Models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "90259cea",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6aefaa9e",
    "metadata": {},
    "outputs": [],
@@ -93,56 +93,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "27f9f2fc",
+   "cell_type": "markdown",
+   "id": "15f680b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[36m__pycache__\u001b[m\u001b[m                        cifar_c10_vit_ls_surrogate.pt\r\n",
-      "census.ipynb                       cifar_c10_vit_surrogate.pt\r\n",
-      "cifar explainer.pt                 cifar_c10_vit_surrogate_lb20.pt\r\n",
-      "cifar resnet.pt                    cifar_explainer_unet.pt\r\n",
-      "cifar single model.ipynb           cifar_explainer_unet_aa_lb20.pt\r\n",
-      "cifar surrogate.pt                 cifar_explainer_unet_aa_ls_lb20.pt\r\n",
-      "cifar-vit.ipynb                    cifar_explainer_unet_lb20.pt\r\n",
-      "cifar.ipynb                        cifar_visualization_v1.ipynb\r\n",
-      "cifar_c10_vit.pt                   cifar_vit_visualization_v1.ipynb\r\n",
-      "cifar_c10_vit_aa.pt                layers.py\r\n",
-      "cifar_c10_vit_aa_ls_surrogate.pt   resnet.py\r\n",
-      "cifar_c10_vit_aa_surrogate.pt      unet.py\r\n",
-      "cifar_c10_vit_ls.pt                vit.py\r\n"
-     ]
-    }
-   ],
    "source": [
-    "!ls"
+    "## Import Resnet model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7a6fe31b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(os.path.isfile('./cifar resnet.pt'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "8311f723",
    "metadata": {},
    "outputs": [
@@ -160,208 +120,8 @@
     "    # Load saved model\n",
     "    print('Loading saved model')\n",
     "    model = torch.load('cifar resnet.pt').to(device)\n",
-    "\n",
     "else:\n",
-    "    # Create model\n",
-    "    model = ResNet18(num_classes=10).to(device)\n",
-    "\n",
-    "    # Training parameters\n",
-    "    lr = 1e-3\n",
-    "    mbsize = 256  # 16\n",
-    "    max_nepochs = 250\n",
-    "    loss_fn = nn.CrossEntropyLoss()\n",
-    "    lookback = 10\n",
-    "    verbose = True\n",
-    "\n",
-    "    # Validation function\n",
-    "    val_loader = DataLoader(val_set, batch_size=mbsize, shuffle=False, num_workers=4)\n",
-    "\n",
-    "    def validate(model):\n",
-    "        n = 0\n",
-    "        mean_loss = 0\n",
-    "        mean_acc = 0\n",
-    "\n",
-    "        for x, y in val_loader:\n",
-    "            # Move to GPU.\n",
-    "            n += len(x)\n",
-    "            x = x.to(device)\n",
-    "            y = y.to(device)\n",
-    "\n",
-    "            # Get predictions.\n",
-    "            pred = model(x)\n",
-    "\n",
-    "            # Update loss.\n",
-    "            loss = loss_fn(pred, y).item()\n",
-    "            mean_loss += len(x) * (loss - mean_loss) / n\n",
-    "\n",
-    "            # Update accuracy.\n",
-    "            acc = (torch.argmax(pred, dim=1) == y).float().mean().item()\n",
-    "            mean_acc += len(x) * (acc - mean_acc) / n\n",
-    "\n",
-    "        return mean_loss, mean_acc\n",
-    "\n",
-    "    # Data loader\n",
-    "    train_loader = DataLoader(train_set, batch_size=mbsize, shuffle=True,\n",
-    "                              drop_last=True, num_workers=4)\n",
-    "\n",
-    "    # Setup\n",
-    "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
-    "    scheduler = optim.lr_scheduler.ReduceLROnPlateau(\n",
-    "        optimizer, factor=0.5, patience=lookback // 2, min_lr=1e-5,\n",
-    "        mode='max', verbose=verbose)\n",
-    "    loss_list = []\n",
-    "    acc_list = []\n",
-    "    min_criterion = np.inf\n",
-    "    min_epoch = 0\n",
-    "\n",
-    "    # Train\n",
-    "    for epoch in range(max_nepochs):\n",
-    "        for x, y in tqdm(train_loader, desc='Training loop', leave=True):\n",
-    "            # Move to device.\n",
-    "            x = x.to(device=device)\n",
-    "            y = y.to(device=device)\n",
-    "\n",
-    "            # Take gradient step.\n",
-    "            loss = loss_fn(model(x), y)\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "            model.zero_grad()\n",
-    "\n",
-    "        # Check progress.\n",
-    "        with torch.no_grad():\n",
-    "            # Calculate validation loss.\n",
-    "            model.eval()\n",
-    "            val_loss, val_acc = validate(model)\n",
-    "            model.train()\n",
-    "            if verbose:\n",
-    "                print('----- Epoch = {} -----'.format(epoch + 1))\n",
-    "                print('Val loss = {:.4f}'.format(val_loss))\n",
-    "                print('Val acc = {:.4f}'.format(val_acc))\n",
-    "            loss_list.append(val_loss)\n",
-    "            acc_list.append(val_acc)\n",
-    "            scheduler.step(val_acc)\n",
-    "\n",
-    "            # Check convergence criterion.\n",
-    "            val_criterion = - val_acc\n",
-    "            if val_criterion < min_criterion:\n",
-    "                min_criterion = val_criterion\n",
-    "                min_epoch = epoch\n",
-    "                best_model = deepcopy(model)\n",
-    "                print('')\n",
-    "                print('New best epoch, acc = {:.4f}'.format(val_acc))\n",
-    "                print('')\n",
-    "            elif (epoch - min_epoch) == lookback:\n",
-    "                if verbose:\n",
-    "                    print('Stopping early')\n",
-    "                break\n",
-    "\n",
-    "    # Keep best model\n",
-    "    model = best_model\n",
-    "    \n",
-    "    # Save model\n",
-    "    model.cpu()\n",
-    "    torch.save(model, 'cifar resnet.pt')\n",
-    "    model.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c5c152bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ResNet(\n",
-       "  (conv1): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (layers): ModuleList(\n",
-       "    (0): Sequential(\n",
-       "      (0): BasicBlock(\n",
-       "        (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (shortcut): Sequential()\n",
-       "      )\n",
-       "      (1): BasicBlock(\n",
-       "        (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (shortcut): Sequential()\n",
-       "      )\n",
-       "    )\n",
-       "    (1): Sequential(\n",
-       "      (0): BasicBlock(\n",
-       "        (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "        (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (shortcut): Sequential(\n",
-       "          (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "          (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        )\n",
-       "      )\n",
-       "      (1): BasicBlock(\n",
-       "        (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (shortcut): Sequential()\n",
-       "      )\n",
-       "    )\n",
-       "    (2): Sequential(\n",
-       "      (0): BasicBlock(\n",
-       "        (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "        (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (shortcut): Sequential(\n",
-       "          (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        )\n",
-       "      )\n",
-       "      (1): BasicBlock(\n",
-       "        (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (shortcut): Sequential()\n",
-       "      )\n",
-       "    )\n",
-       "    (3): Sequential(\n",
-       "      (0): BasicBlock(\n",
-       "        (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "        (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (shortcut): Sequential(\n",
-       "          (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "          (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        )\n",
-       "      )\n",
-       "      (1): BasicBlock(\n",
-       "        (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "        (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (shortcut): Sequential()\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (linear): Linear(in_features=512, out_features=10, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model"
+    "    print('Model not available')"
    ]
   },
   {
@@ -369,12 +129,12 @@
    "id": "1f716735",
    "metadata": {},
    "source": [
-    "# Train surrogate"
+    "## Import surrogate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e143a345",
    "metadata": {},
    "outputs": [],
@@ -385,25 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "86272b90",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(os.path.isfile('cifar surrogate.pt'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "873b3ccf",
    "metadata": {},
    "outputs": [
@@ -423,48 +165,20 @@
     "    surrogate = ImageSurrogate(surr, width=32, height=32, superpixel_size=2)\n",
     "\n",
     "else:\n",
-    "    # Create model\n",
-    "    surr = nn.Sequential(\n",
-    "        MaskLayer2d(value=0, append=True),\n",
-    "        ResNet18(in_channels=4, num_classes=10)).to(device)\n",
-    "\n",
-    "    # Set up surrogate object\n",
-    "    surrogate = ImageSurrogate(surr, width=32, height=32, superpixel_size=2)\n",
-    "    \n",
-    "    # Set up datasets\n",
-    "    train_surr = DatasetInputOnly(train_set)\n",
-    "    val_surr = DatasetInputOnly(val_set)\n",
-    "    original_model = nn.Sequential(model, nn.Softmax(dim=1))\n",
-    "\n",
-    "    # Train\n",
-    "    surrogate.train_original_model(\n",
-    "        train_surr,\n",
-    "        val_surr,\n",
-    "        original_model,\n",
-    "        batch_size=256,\n",
-    "        max_epochs=100,\n",
-    "        loss_fn=KLDivLoss(),\n",
-    "        lookback=10,\n",
-    "        bar=True,\n",
-    "        verbose=True)\n",
-    "    \n",
-    "    # Save surrogate\n",
-    "    surr.cpu()\n",
-    "    torch.save(surr, 'cifar surrogate.pt')\n",
-    "    surr.to(device)"
+    "    print('Model not available')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "114dc86f",
+   "id": "e11bb0c7",
    "metadata": {},
    "source": [
-    "# Train FastSHAP"
+    "## Import Explainer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "ca5f640f",
    "metadata": {},
    "outputs": [],
@@ -475,25 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "ea06ffb6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(os.path.isfile('cifar explainer.pt'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "71acd881",
    "metadata": {},
    "outputs": [
@@ -513,33 +209,7 @@
     "    fastshap = FastSHAP(explainer, surrogate, link=nn.LogSoftmax(dim=1))\n",
     "\n",
     "else:\n",
-    "    # Set up explainer model\n",
-    "    explainer = UNet(n_classes=10, num_down=2, num_up=1, num_convs=3).to(device)\n",
-    "\n",
-    "    # Set up FastSHAP object\n",
-    "    fastshap = FastSHAP(explainer, surrogate, link=nn.LogSoftmax(dim=1))\n",
-    "\n",
-    "    # Set up datasets\n",
-    "    fastshap_train = DatasetInputOnly(train_set)\n",
-    "    fastshap_val = DatasetInputOnly(val_set)\n",
-    "\n",
-    "    # Train\n",
-    "    fastshap.train(\n",
-    "        fastshap_train,\n",
-    "        fastshap_val,\n",
-    "        batch_size=128,\n",
-    "        num_samples=2,\n",
-    "        max_epochs=200,\n",
-    "        eff_lambda=1e-2,\n",
-    "        validation_samples=1,\n",
-    "        lookback=10,\n",
-    "        bar=True,\n",
-    "        verbose=True)\n",
-    "    \n",
-    "    # Save explainer\n",
-    "    explainer.cpu()\n",
-    "    torch.save(explainer, 'cifar explainer.pt')\n",
-    "    explainer.to(device)"
+    "    print('Model not available')"
    ]
   },
   {
