--- a/notebooks/cifar_models_performance_analysis_v1.ipynb
+++ b/notebooks/cifar_models_performance_analysis_v1.ipynb
@@ -119,7 +119,7 @@
     "if os.path.isfile('cifar resnet.pt'):\n",
     "    # Load saved model\n",
     "    print('Loading saved model')\n",
-    "    model = torch.load('cifar resnet.pt').to(device)\n",
+    "    model_resnet = torch.load('cifar resnet.pt').to(device)\n",
     "else:\n",
     "    print('Model not available')"
    ]
@@ -211,6 +211,567 @@
     "else:\n",
     "    print('Model not available')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aabdddd5",
+   "metadata": {},
+   "source": [
+    "# Initialize dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "073f69fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dset = val_set\n",
+    "# dset_size = 10000\n",
+    "dset_size = 20\n",
+    "targets = np.array(dset.targets)\n",
+    "num_classes = targets.max() + 1\n",
+    "classes = ['Airplane', 'Car', 'Bird', 'Cat', 'Deer', 'Dog', 'Frog', 'Horse', 'Ship', 'Truck']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9db0df63",
+   "metadata": {},
+   "source": [
+    "# Plot individual images and values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "e154de46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "d0e89002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_img(x):\n",
+    "    mean = np.array([0.4914, 0.4822, 0.4465])[:, np.newaxis, np.newaxis]\n",
+    "    std = np.array([0.2023, 0.1994, 0.2010])[:, np.newaxis, np.newaxis]\n",
+    "    im = x.numpy() * std + mean    \n",
+    "    im = im.transpose(1, 2, 0).astype(float)\n",
+    "    im = np.clip(im, a_min=0, a_max=1)\n",
+    "    plt.imshow(im, vmin=0, vmax=1)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "3dd2811e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_values(value):\n",
+    "#     plt.imshow(value, cmap='seismic',vmin=-m, vmax=m )\n",
+    "    plt.imshow(value, cmap='seismic')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab43f281",
+   "metadata": {},
+   "source": [
+    "# Collect performance results Using Resnet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e2c2afe",
+   "metadata": {},
+   "source": [
+    "## Create dataframe to store results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "881b2e10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "3ac11121",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns =  ['y_label','y_resnet_class', 'y_resnet_prob', 'resnet_correct']\n",
+    "dset_idxs = np.array(range(dset_size))\n",
+    "results = pd.DataFrame(columns = columns, index = dset_idxs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "c26784d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y_label</th>\n",
+       "      <th>y_resnet_class</th>\n",
+       "      <th>y_resnet_prob</th>\n",
+       "      <th>resnet_correct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  y_label y_resnet_class y_resnet_prob resnet_correct\n",
+       "0     NaN            NaN           NaN            NaN\n",
+       "1     NaN            NaN           NaN            NaN\n",
+       "2     NaN            NaN           NaN            NaN\n",
+       "3     NaN            NaN           NaN            NaN\n",
+       "4     NaN            NaN           NaN            NaN"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96c7133e",
+   "metadata": {},
+   "source": [
+    "## Collect data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "7537a145",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx in range(dset_size):\n",
+    "    x, y = zip(*[dset[idx]])\n",
+    "    x = torch.stack(x)\n",
+    "    y = y[0]\n",
+    "    y_pred = model_resnet(x).softmax(dim=1).detach()\n",
+    "    y_pred_class = np.argmax(y_pred)\n",
+    "#     print(y)\n",
+    "#     print(y_pred_class)\n",
+    "#     print(y_pred)\n",
+    "#     print(classes[y])\n",
+    "    \n",
+    "    # store values\n",
+    "    results.iloc[idx]['y_label'] = y\n",
+    "    results.iloc[idx]['y_resnet_class'] = y_pred_class.item()\n",
+    "    results.iloc[idx]['y_resnet_prob'] = y_pred[0][y_pred_class.item()].item()\n",
+    "    if (y == y_pred_class): \n",
+    "        results.iloc[idx]['resnet_correct'] = 1\n",
+    "    else:\n",
+    "         results.iloc[idx]['resnet_correct'] = 0\n",
+    "    \n",
+    "    \n",
+    "    # Get value\n",
+    "#     values = fastshap.shap_values(x.to(device))\n",
+    "    \n",
+    "#     plot_img(x[0])\n",
+    "#     print(values.shape)\n",
+    "#     plot_values(values[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "9a0e9073",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0445)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred[0][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "9052adb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y_label</th>\n",
+       "      <th>y_resnet_class</th>\n",
+       "      <th>y_resnet_prob</th>\n",
+       "      <th>resnet_correct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.366576</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.307475</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.241541</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.37162</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.321299</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.551747</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.407426</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.264785</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.233738</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.523663</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  y_label y_resnet_class y_resnet_prob resnet_correct\n",
+       "0       3              3      0.366576              1\n",
+       "1       8              8      0.307475              1\n",
+       "2       8              1      0.241541              0\n",
+       "3       0              1       0.37162              0\n",
+       "4       6              1      0.321299              0\n",
+       "5       6              1      0.551747              0\n",
+       "6       1              1      0.407426              1\n",
+       "7       6              5      0.264785              0\n",
+       "8       3              1      0.233738              0\n",
+       "9       1              1      0.523663              1"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "3c5deb6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrong_results = results[results['resnet_correct'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "0ea4efba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y_label</th>\n",
+       "      <th>y_resnet_class</th>\n",
+       "      <th>y_resnet_prob</th>\n",
+       "      <th>resnet_correct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.241541</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.37162</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.321299</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.551747</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.264785</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.233738</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.239549</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.243251</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.310444</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.219672</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.405722</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.356351</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   y_label y_resnet_class y_resnet_prob resnet_correct\n",
+       "2        8              1      0.241541              0\n",
+       "3        0              1       0.37162              0\n",
+       "4        6              1      0.321299              0\n",
+       "5        6              1      0.551747              0\n",
+       "7        6              5      0.264785              0\n",
+       "8        3              1      0.233738              0\n",
+       "10       0              1      0.239549              0\n",
+       "13       7              9      0.243251              0\n",
+       "15       8              1      0.310444              0\n",
+       "16       5              1      0.219672              0\n",
+       "17       7              9      0.405722              0\n",
+       "19       6              1      0.356351              0"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrong_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ebbeedc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
