Cleaned data collection block

--- a/notebooks/cifar_models_performance_analysis_v1.ipynb
+++ b/notebooks/cifar_models_performance_analysis_v1.ipynb
@@ -433,10 +433,6 @@
     "    y = y[0]\n",
     "    y_pred = model_resnet(x).softmax(dim=1).detach()\n",
     "    y_pred_class = np.argmax(y_pred)\n",
-    "#     print(y)\n",
-    "#     print(y_pred_class)\n",
-    "#     print(y_pred)\n",
-    "#     print(classes[y])\n",
     "    \n",
     "    # store values\n",
     "    results.iloc[idx]['y_label'] = y\n",
@@ -445,15 +441,7 @@
     "    if (y == y_pred_class): \n",
     "        results.iloc[idx]['resnet_correct'] = 1\n",
     "    else:\n",
-    "         results.iloc[idx]['resnet_correct'] = 0\n",
-    "    \n",
-    "    \n",
-    "    # Get value\n",
-    "#     values = fastshap.shap_values(x.to(device))\n",
-    "    \n",
-    "#     plot_img(x[0])\n",
-    "#     print(values.shape)\n",
-    "#     plot_values(values[0][0])"
+    "         results.iloc[idx]['resnet_correct'] = 0\n"
    ]
   },
   {
