added y_prob_correct attribute to results dataframe

--- a/notebooks/cifar_models_performance_analysis_v1.ipynb
+++ b/notebooks/cifar_models_performance_analysis_v1.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "id": "073f69fa",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "id": "e154de46",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "d0e89002",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "id": "3dd2811e",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 40,
    "id": "40d49188",
    "metadata": {},
    "outputs": [],
@@ -311,19 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 52,
    "id": "3ac11121",
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns =  ['y_label','y_resnet_class', 'y_resnet_prob', 'resnet_correct']\n",
+    "columns =  ['y_label','y_resnet','y_prob_correct', 'y_prob_resnet', 'resnet_correct']\n",
     "dset_idxs = np.array(range(dset_size))\n",
     "results = pd.DataFrame(columns = columns, index = dset_idxs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 53,
    "id": "8bc8ebdc",
    "metadata": {},
    "outputs": [
@@ -349,14 +349,16 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>y_label</th>\n",
-       "      <th>y_resnet_class</th>\n",
-       "      <th>y_resnet_prob</th>\n",
+       "      <th>y_resnet</th>\n",
+       "      <th>y_prob_correct</th>\n",
+       "      <th>y_prob_resnet</th>\n",
        "      <th>resnet_correct</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -368,9 +370,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -382,9 +386,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -395,15 +401,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  y_label y_resnet_class y_resnet_prob resnet_correct\n",
-       "0     NaN            NaN           NaN            NaN\n",
-       "1     NaN            NaN           NaN            NaN\n",
-       "2     NaN            NaN           NaN            NaN\n",
-       "3     NaN            NaN           NaN            NaN\n",
-       "4     NaN            NaN           NaN            NaN"
+       "  y_label y_resnet y_prob_correct y_prob_resnet resnet_correct\n",
+       "0     NaN      NaN            NaN           NaN            NaN\n",
+       "1     NaN      NaN            NaN           NaN            NaN\n",
+       "2     NaN      NaN            NaN           NaN            NaN\n",
+       "3     NaN      NaN            NaN           NaN            NaN\n",
+       "4     NaN      NaN            NaN           NaN            NaN"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 58,
    "id": "7537a145",
    "metadata": {},
    "outputs": [],
@@ -436,17 +442,21 @@
     "    \n",
     "    # store values\n",
     "    results.iloc[idx]['y_label'] = y\n",
-    "    results.iloc[idx]['y_resnet_class'] = y_pred_class.item()\n",
-    "    results.iloc[idx]['y_resnet_prob'] = y_pred[0][y_pred_class.item()].item()\n",
+    "    results.iloc[idx]['y_resnet'] = y_pred_class.item()\n",
+    "    results.iloc[idx]['y_prob_correct'] = y_pred[0][y].item()\n",
+    "    results.iloc[idx]['y_prob_resnet'] = y_pred[0][y_pred_class.item()].item()\n",
+    "    \n",
     "    if (y == y_pred_class): \n",
     "        results.iloc[idx]['resnet_correct'] = 1\n",
     "    else:\n",
-    "         results.iloc[idx]['resnet_correct'] = 0\n"
+    "        results.iloc[idx]['resnet_correct'] = 0\n",
+    "          \n",
+    "         \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 59,
    "id": "2e75c246",
    "metadata": {},
    "outputs": [
@@ -456,7 +466,7 @@
        "tensor(0.0445)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 60,
    "id": "9052adb8",
    "metadata": {},
    "outputs": [
@@ -493,8 +503,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>y_label</th>\n",
-       "      <th>y_resnet_class</th>\n",
-       "      <th>y_resnet_prob</th>\n",
+       "      <th>y_resnet</th>\n",
+       "      <th>y_prob_correct</th>\n",
+       "      <th>y_prob_resnet</th>\n",
        "      <th>resnet_correct</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -504,6 +515,7 @@
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>0.366576</td>\n",
+       "      <td>0.366576</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -511,12 +523,14 @@
        "      <td>8</td>\n",
        "      <td>8</td>\n",
        "      <td>0.307475</td>\n",
+       "      <td>0.307475</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>8</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.180506</td>\n",
        "      <td>0.241541</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -524,6 +538,7 @@
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.019308</td>\n",
        "      <td>0.37162</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -531,6 +546,7 @@
        "      <th>4</th>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.06216</td>\n",
        "      <td>0.321299</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -538,6 +554,7 @@
        "      <th>5</th>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.041133</td>\n",
        "      <td>0.551747</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -546,12 +563,14 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.407426</td>\n",
+       "      <td>0.407426</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>6</td>\n",
        "      <td>5</td>\n",
+       "      <td>0.060609</td>\n",
        "      <td>0.264785</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -559,6 +578,7 @@
        "      <th>8</th>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.230295</td>\n",
        "      <td>0.233738</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -567,6 +587,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.523663</td>\n",
+       "      <td>0.523663</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -574,20 +595,20 @@
        "</div>"
       ],
       "text/plain": [
-       "  y_label y_resnet_class y_resnet_prob resnet_correct\n",
-       "0       3              3      0.366576              1\n",
-       "1       8              8      0.307475              1\n",
-       "2       8              1      0.241541              0\n",
-       "3       0              1       0.37162              0\n",
-       "4       6              1      0.321299              0\n",
-       "5       6              1      0.551747              0\n",
-       "6       1              1      0.407426              1\n",
-       "7       6              5      0.264785              0\n",
-       "8       3              1      0.233738              0\n",
-       "9       1              1      0.523663              1"
+       "  y_label y_resnet y_prob_correct y_prob_resnet resnet_correct\n",
+       "0       3        3       0.366576      0.366576              1\n",
+       "1       8        8       0.307475      0.307475              1\n",
+       "2       8        1       0.180506      0.241541              0\n",
+       "3       0        1       0.019308       0.37162              0\n",
+       "4       6        1        0.06216      0.321299              0\n",
+       "5       6        1       0.041133      0.551747              0\n",
+       "6       1        1       0.407426      0.407426              1\n",
+       "7       6        5       0.060609      0.264785              0\n",
+       "8       3        1       0.230295      0.233738              0\n",
+       "9       1        1       0.523663      0.523663              1"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 61,
    "id": "3c5deb6c",
    "metadata": {},
    "outputs": [],
@@ -608,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 57,
    "id": "6a037fe6",
    "metadata": {},
    "outputs": [
@@ -634,117 +655,24 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>y_label</th>\n",
-       "      <th>y_resnet_class</th>\n",
-       "      <th>y_resnet_prob</th>\n",
+       "      <th>y_resnet</th>\n",
+       "      <th>y_prob_correct</th>\n",
+       "      <th>y_prob_resnet</th>\n",
        "      <th>resnet_correct</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.241541</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.37162</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.321299</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.551747</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.264785</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.233738</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.239549</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.243251</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.310444</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.219672</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.405722</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.356351</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   y_label y_resnet_class y_resnet_prob resnet_correct\n",
-       "2        8              1      0.241541              0\n",
-       "3        0              1       0.37162              0\n",
-       "4        6              1      0.321299              0\n",
-       "5        6              1      0.551747              0\n",
-       "7        6              5      0.264785              0\n",
-       "8        3              1      0.233738              0\n",
-       "10       0              1      0.239549              0\n",
-       "13       7              9      0.243251              0\n",
-       "15       8              1      0.310444              0\n",
-       "16       5              1      0.219672              0\n",
-       "17       7              9      0.405722              0\n",
-       "19       6              1      0.356351              0"
+       "Empty DataFrame\n",
+       "Columns: [y_label, y_resnet, y_prob_correct, y_prob_resnet, resnet_correct]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 35,
    "id": "00563e51",
    "metadata": {},
    "outputs": [],
@@ -772,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 36,
    "id": "6cd37194",
    "metadata": {},
    "outputs": [
@@ -804,8 +732,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "1503ed12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y_label</th>\n",
+       "      <th>y_resnet</th>\n",
+       "      <th>y_prob_correct</th>\n",
+       "      <th>y_prob_resnet</th>\n",
+       "      <th>resnet_correct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.366576</td>\n",
+       "      <td>0.366576</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.307475</td>\n",
+       "      <td>0.307475</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.407426</td>\n",
+       "      <td>0.407426</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.523663</td>\n",
+       "      <td>0.523663</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.427377</td>\n",
+       "      <td>0.427377</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.315315</td>\n",
+       "      <td>0.315315</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.47515</td>\n",
+       "      <td>0.47515</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.395053</td>\n",
+       "      <td>0.395053</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   y_label y_resnet y_prob_correct y_prob_resnet resnet_correct\n",
+       "0        3        3       0.366576      0.366576              1\n",
+       "1        8        8       0.307475      0.307475              1\n",
+       "6        1        1       0.407426      0.407426              1\n",
+       "9        1        1       0.523663      0.523663              1\n",
+       "11       9        9       0.427377      0.427377              1\n",
+       "12       5        5       0.315315      0.315315              1\n",
+       "14       9        9        0.47515       0.47515              1\n",
+       "18       8        8       0.395053      0.395053              1"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[results['resnet_correct'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f445e879",
    "metadata": {},
    "outputs": [],
    "source": []
