--- a/notebooks/cifar_models_performance_analysis_v1.ipynb
+++ b/notebooks/cifar_models_performance_analysis_v1.ipynb
@@ -59,7 +59,8 @@
    "id": "b0af5dd2",
    "metadata": {},
    "source": [
-    "# Import Resnet Models"
+    "# Import Resnet Models\n",
+    "----"
    ]
   },
   {
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "id": "873b3ccf",
    "metadata": {},
    "outputs": [
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "id": "ca5f640f",
    "metadata": {},
    "outputs": [],
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 98,
    "id": "71acd881",
    "metadata": {},
    "outputs": [
@@ -214,7 +215,175 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aabdddd5",
+   "id": "76f59344",
+   "metadata": {},
+   "source": [
+    "# Import Vit Models\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7502d778",
+   "metadata": {},
+   "source": [
+    "## Import Vit Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "f0f0b6d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vit import ViT\n",
+    "model_path = 'cifar_c10_vit.pt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "94732f3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading saved model\n"
+     ]
+    }
+   ],
+   "source": [
+    "if os.path.isfile(model_path):\n",
+    "    # load saved model\n",
+    "    print(\"Loading saved model\")\n",
+    "    model = torch.load(model_path).to(device)\n",
+    "else:\n",
+    "    print('Model not available')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ce2747eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.cpu(), model_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fad1e43f",
+   "metadata": {},
+   "source": [
+    "## Import surrogates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "5ff9508c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastshap import ImageSurrogate\n",
+    "from fastshap.utils import MaskLayer2d, DatasetInputOnly, KLDivLoss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "108624d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "surr_model_path = 'cifar_c10_vit_surrogate_lb20.pt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "9c2c6e3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading saved surrogate model\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for model\n",
+    "if os.path.isfile(surr_model_path):\n",
+    "    print('Loading saved surrogate model')\n",
+    "    surr = torch.load(surr_model_path).to(device)\n",
+    "    surrogate = ImageSurrogate(surr, width=32, height=32, superpixel_size=2)\n",
+    "else:\n",
+    "    print('Model not available')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78d77c45",
+   "metadata": {},
+   "source": [
+    "## Import explainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "171e3355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unet import UNet\n",
+    "from fastshap import FastSHAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "13c8c4a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explainer_path = 'cifar_explainer_unet_lb20.pt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6bcc8ee1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading saved explainer model\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for model\n",
+    "if os.path.isfile(explainer_path):\n",
+    "    print('Loading saved explainer model')\n",
+    "    explainer = torch.load(explainer_path).to(device)\n",
+    "    fastshap = FastSHAP(explainer, surrogate, link=nn.LogSoftmax(dim=1))\n",
+    "\n",
+    "else:\n",
+    "    print('Model not available')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b632ff9",
    "metadata": {},
    "source": [
     "# Initialize dataset"
@@ -223,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "073f69fa",
+   "id": "411db523",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db0df63",
+   "id": "daa296ae",
    "metadata": {},
    "source": [
     "# Plot individual images and values"
@@ -246,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e154de46",
+   "id": "d692d6fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d0e89002",
+   "id": "570db093",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3dd2811e",
+   "id": "66fa87b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab43f281",
+   "id": "8cd2f800",
    "metadata": {},
    "source": [
     "# Collect performance results Using Resnet"
@@ -292,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e2c2afe",
+   "id": "c0552c0d",
    "metadata": {},
    "source": [
     "## Create dataframe to store results"
@@ -301,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "40d49188",
+   "id": "8f3c9492",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "3ac11121",
+   "id": "1d0f709d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8bc8ebdc",
+   "id": "6cfcec4b",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96c7133e",
+   "id": "c8d4b10f",
    "metadata": {},
    "source": [
     "## Collect data "
@@ -429,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7537a145",
+   "id": "267fc3a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2e75c246",
+   "id": "535a776d",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "9052adb8",
+   "id": "88cb8dab",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "3c5deb6c",
+   "id": "c8b668a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6a037fe6",
+   "id": "35e09257",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "00563e51",
+   "id": "d2ad7987",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6cd37194",
+   "id": "0e0c3f1e",
    "metadata": {},
    "outputs": [
     {
@@ -733,8 +902,10 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "1503ed12",
-   "metadata": {},
+   "id": "dec21804",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -853,14 +1024,6 @@
    "source": [
     "results[results['resnet_correct'] == 1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f445e879",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
